fix: wrap login page inside html tag

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ h1 {
 
 form > label, form > .label {
   & > span {
-    @apply text-blue-900 text-xs;
+    @apply text-blue-900 text-xs font-bold;
   }
 }
 
